# loanMeWebapi

./: .env.example  Cargo.toml
migrations/: 0001_Usuario.sql  0002_PerfilCrediticio.sql  0003_Asegurador.sql  0004_Prestamo.sql  0005_PrestamoTxns.sql  0005_Seguro.sql  0006_PrestamoPropuesta.sql  0006_RelacionPrestamoSeguro.sql  0006_Seguro.sql  0007_RelacionPrestamoSeguro.sql
src/: db.rs  endpoints.rs  lib.rs  logic.rs  main.rs
src/db/: db.rs  redisServer.rs
src/endpoints/: endpoints.rs
src/models/: InputTypes.rs  PerfilCrediticio.rs  Prestamo.rs  PrestamoPropuesta.rs  PrestamoTxn.rs  mail.rs  mod.rs  session.rs  userInput.rs  usuario.rs
src/routes/: auth.rs  endpoints.rs  loans.rs  mod.rs  payments.rs  profile.rs
src/services/: appState.rs  db.rs  mailing.rs  misc.rs  mod.rs  redisServer.rs
tls/: tlscert.crt  tlskey.key
