[package]
name = "loanMeWebapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-server = { version = "0.5.0", features = ["tls-rustls"] }
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
dotenvy = "0.15.7"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
crypto = { version = "0.5.0", features = ["password-hash"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

