[package]
name = "loanMeWebapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-server = { version = "0.5.0", features = ["tls-rustls"] }
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96", default_features = false, features = ["alloc"] }
dotenvy = "0.15.7"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"] }
argon2 = "0.5.0"
sha2 = "0.10.6"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
redis = { version = "0.23.0", features = ["tokio-rustls-comp", "ahash", "connection-manager"] }
chrono = { version = "0.4.26", features=["serde", "pure-rust-locales"] }